# mcp_base

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: develop-best-practice-researcher.md  develop-coder.md  develop-design-author.md  develop-doc-updater.md  develop-pr-author.md  develop-requirements-author.md  develop-reviewer.md  develop-runner.md  develop-surveyor.md  pr-review-analyst.md  pr-review-fix-plan-mapper.md  pr-review-responder.md  workflow-init.md
.claude/hooks/: format-and-check.sh
.claude/rules/: 00-common.md  05-architecture.md  10-domain.md  20-usecase.md  30-infrastructure.md  40-interface-adapter.md  50-composition-root.md  60-tests.md
.claude/skills/context-engineering/: SKILL.md
.claude/skills/context-engineering/references/: agents.md  claude-md.md  code-and-docs.md  ephemeral.md  overview.md  skills.md  subagent-prompts.md
.claude/skills/develop/: SKILL.md
.claude/skills/multi-aspect-review/: SKILL.md
.claude/skills/pr-review-respond/: SKILL.md
.claude/skills/prompt-engineering/: SKILL.md
.claude/skills/proposal-design-cycle/: SKILL.md
.claude/skills/user-hearing/: SKILL.md
.claude/skills/workflow-orchestration/: SKILL.md
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
db/init/: 01_schema.sql
docker/: render-secrets.sh
docs/: 00_documentation-map.md  01_architecture.md  02_features.md  03_screens.md  04_data-design.md  05_e2e-tests.md  06_operations.md
src/: app.py
src/domain/: __init__.py  greeting.py  greeting_record.py
src/infrastructure/: __init__.py  config.py  email_mask.py  logging_config.py  mysql_greeting_crud_repository.py  mysql_greeting_repository.py  static_greeting_repository.py
src/interface_adapter/: auth_gate_view.py  errors.py  greeting_controller.py  greeting_crud_controller.py  greeting_crud_view.py  greeting_view.py
src/usecase/: __init__.py  authorize_admin_usecase.py  errors.py  greet_usecase.py  greeting_crud_port.py  greeting_port.py  manage_greetings_usecase.py
tests/domain/: test_greeting.py
tests/infrastructure/: test_auth_config.py  test_email_mask.py  test_logging_config.py  test_mysql_config.py  test_mysql_greeting_crud_repository.py  test_render_secrets.py
tests/integration/: test_mysql_integration.py
tests/interface_adapter/: test_auth_gate_view.py  test_greeting_crud_controller.py  test_greeting_crud_view.py
tests/usecase/: test_authorize_admin_usecase.py  test_greet_usecase.py  test_manage_greetings_usecase.py
