[project]
name = "mcp-base"
version = "0.1.0"
description = "Hello World Streamlit app structured with Clean Architecture 4 layers."
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.0",
    "PyMySQL>=1.0",
    "dbutils>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/domain",
    "src/usecase",
    "src/interface_adapter",
    "src/infrastructure",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# pycodestyle の整形系ルール（E1xx/E2xx/E3xx）は ruff format に委ね二重指摘を避ける。
# 論理系の pycodestyle サブセット（E4/E7/E9）＋pyflakes（F）＋import 整列（I）を土台に、
# バグ検出（B: flake8-bugbear）・構文の近代化（UP: pyupgrade）・簡素化（SIM:
# flake8-simplify）・ruff 固有（RUF）を加えて品質を底上げする。
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM", "RUF"]
# RUF001/002/003 は全角の日本語句読点（（）：等）を曖昧文字として警告するが、
# 本プロジェクトは日本語コメント/docstring を意図的に多用する方針のため無効化する。
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
# src レイアウト（PYTHONPATH=src 相当）に合わせ、infrastructure 等を解決させる。
mypy_path = "src"
# 検査対象は本体コード（src）と合成ルート（app.py）に絞る。テストはフェイク/スタブを
# 名目型に一致させない設計（duck typing）で、strict の nominal 検査と相性が悪いため
# 対象外とする。型の品質保証は本体コードで担保する。
files = ["src", "app.py"]
# 自前コードは型を厳密に検査する（型ヒントは丁寧に付いている前提）。
strict = true

# 型スタブを提供しない外部ライブラリは import 解決の失敗を許容する。
[[tool.mypy.overrides]]
module = ["streamlit", "pymysql.*", "dbutils.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# テスト実行時に常にカバレッジを計測する。未到達行を term-missing で明示し、
# リファクタ中のテスト漏れを定量把握する。pythonpath（src レイアウト）に合わせ
# 計測対象もソースの 4 層が並ぶ src/ とする。
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
# 計測はソース本体のみ。テスト自身は対象外にしてノイズを除く。
omit = ["tests/*"]
